--- a/src/bringup/CMakeLists.txt
+++ b/src/bringup/CMakeLists.txt
@@ -18,7 +18,7 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 
-install(DIRECTORY launch config poses transforms
+install(DIRECTORY launch config
   DESTINATION share/${PROJECT_NAME})
 
 
