--- a/src/sp_model/Cargo.toml
+++ b/src/sp_model/Cargo.toml
@@ -17,10 +17,11 @@ default = ["ros"]
 ros = ["sp-runner/ros"]
 
 [dependencies]
-# sp-domain = { path = "/Users/kristofer/sw/sp-rust/sp-domain" }
-# sp-runner = { path = "/Users/kristofer/sw/sp-rust/sp-runner" }
-sp-domain = { git = "https://github.com/sequenceplanner/sp-rust", rev = "547eb57" }
-sp-runner = { git = "https://github.com/sequenceplanner/sp-rust", rev = "547eb57" }
+sp-domain = { path = "/home/martin/sp/sp-domain" }
+sp-runner = { path = "/home/martin/sp/sp-runner" }
+
+# sp-domain = { git = "https://github.com/sequenceplanner/sp-rust", rev = "547eb57" }
+# sp-runner = { git = "https://github.com/sequenceplanner/sp-rust", rev = "547eb57" }
 
 
 failure = "0.1.8"
